flow-rates: refactor LIFETIME up to sharable base